# office-convert-server

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  cspell.json  docker-compose.yml
.github/workflows/: build.yml
client/: Cargo.toml
client/src/: lib.rs  load.rs
libreofficesdk/: Cargo.toml  README.md
libreofficesdk/src/: lib.rs
src/: error.rs  main.rs
