[package]
name = "office-convert-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cheap sharable byte array type
bytes = "1"

# Environment variables
dotenvy = "0.15"

# LibreOfficeKit for conversion
libreoffice-rs = "0.3"

# Random generation (For temp file names)
rand = "0.8"

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP server
axum = { version = "0.7", features = ["multipart"] }
axum_typed_multipart = "0.11"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Basic logging
tracing = "0.1"
