[package]
name = "office-convert-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jacobtread/office-convert-server"
authors = ["Jacobtread <jacobtread@gmail.com>"]
readme = "../README.md"
description = "Client library for interracting with office-convert-server"

[dependencies]
async-trait = "0.1"
bytes = "1.7"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "charset",
    "multipart",
    "rustls-tls",
    "http2",
    "macos-system-configuration",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
